tests/expectations/compiler/function/duplicate_function_name_fail.out
Error [EAST0372013]: the function `foo` is being shadowed.
    --> compiler-test:10:5
     |
   6 |     function foo() -> u32 {
        return 1u32;
    }
     |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ previous definition of the function `foo` here
     ...
  10 |     function foo() -> u32 {
        return 2u32;
    }
     |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `foo` redefined here
     |
     = names must be unique within their scope
